# SwarmExploration

./: .gitignore  .gitmodules  README.md
ros/: localization.rviz
ros/catkin_ws/: calibration_params.yml  frames.gv
ros/catkin_ws/src/aruco_marker_models/: README.txt
ros/catkin_ws/src/aruco_marker_models/aruco_cube_1/: model.config  model.sdf
ros/catkin_ws/src/distributed_localization/: CMakeLists.txt  package.xml  particle_cloud.txt
ros/catkin_ws/src/distributed_localization/launch/: amcl.launch  distributed_loc.launch  distributed_localization.launch  localization.launch  map_server.launch  multi_turtlebot3.launch  multi_turtlebot3_relative_pose.launch  multi_turtlebot3_v2.launch  random_walk.launch  testing.launch
ros/catkin_ws/src/distributed_localization/maps/: map.pgm
ros/catkin_ws/src/distributed_localization/rviz/: localization.rviz
ros/catkin_ws/src/distributed_localization/saved_data/: particle_cloud_1.txt  particle_cloud_2.txt
ros/catkin_ws/src/distributed_localization/scripts/: detection_prob.py  graphing_test_results.py  kde_example.py  kde_example_copy.py  kernel_density_estimator.py  log_pose.py  particle_filter_ops.py  pose_conversions.py  quaternion_to_pose2d.py  reweight_data.py  shneka.py  shneka_kde.py  sync_loc_on_detect.py  test.bash
ros/catkin_ws/src/distributed_localization/scripts/sandbox/: bag_data.py  shneka.py  translate_testing.py
ros/catkin_ws/src/distributed_localization/scripts/sandbox/saved_data/: particle_cloud_1(1).txt  particle_cloud_1.txt  particle_cloud_2(1).txt  particle_cloud_2.txt  particle_cloud_3(1).txt
ros/catkin_ws/src/distributed_localization/scripts/testing_data/: test-1-tb3_1-actual.txt  test-1-tb3_1-amcl.txt  test-1-tb3_2-actual.txt  test-1-tb3_2-amcl.txt  test-1-tb3_3-actual.txt  test-1-tb3_3-amcl.txt  test-2-tb3_1-actual.txt  test-2-tb3_1-amcl.txt  test-2-tb3_2-actual.txt  test-2-tb3_2-amcl.txt  test-2-tb3_3-actual.txt  test-2-tb3_3-amcl.txt  test-3-tb3_1-actual.txt  test-3-tb3_1-amcl.txt  test-3-tb3_2-actual.txt  test-3-tb3_2-amcl.txt  test-3-tb3_3-actual.txt  test-3-tb3_3-amcl.txt  test-4-tb3_1-actual.txt  test-4-tb3_1-amcl.txt  test-4-tb3_2-actual.txt  test-4-tb3_2-amcl.txt  test-4-tb3_3-actual.txt  test-4-tb3_3-amcl.txt  test-5-tb3_1-actual.txt  test-5-tb3_1-amcl.txt  test-5-tb3_2-actual.txt  test-5-tb3_2-amcl.txt  test-5-tb3_3-actual.txt  test-5-tb3_3-amcl.txt
ros/catkin_ws/src/distributed_localization/src/: amcl_de.py  sync_loc_on_detect.py
ros/catkin_ws/src/distributed_localization/worlds/: light.world
ros/catkin_ws/src/navigation/amcl/: CMakeLists.txt  package.xml
ros/catkin_ws/src/navigation/amcl/src/: amcl_node.cpp
ros/catkin_ws/src/navigation/amcl/srv/: GetParticlecloud.srv  SetParticlecloud.srv
ros/catkin_ws/src/navigation/amcl_msgs/: CMakeLists.txt  package.xml
ros/catkin_ws/src/navigation/amcl_msgs/msg/: WeightedParticlecloud.msg
ros/catkin_ws/src/old_gazebo_waffle_pi_models/waffle_pi_1/: model.config  model.sdf
ros/catkin_ws/src/old_gazebo_waffle_pi_models/waffle_pi_1/meshes/: artag_11.dae  artag_13.dae
ros/catkin_ws/src/robots_with_aruco/: CMakeLists.txt  package.xml
ros/catkin_ws/src/robots_with_aruco/launch/: turtlebot3_empty_world.launch
ros/catkin_ws/src/robots_with_aruco/meshes/: artag_14.dae  artag_21.dae  artag_22.dae  artag_23.dae  artag_24.dae  artag_31.dae  artag_32.dae  artag_33.dae  artag_34.dae  marker_template.blend  marker_template.blend1
ros/catkin_ws/src/robots_with_aruco/urdf/: tb3_1.urdf.xacro  tb3_2.urdf.xacro  tb3_3.urdf.xacro  turtlebot3_1.gazebo.xacro  turtlebot3_2.gazebo.xacro  turtlebot3_3.gazebo.xacro
ros/catkin_ws/src/waffle_pi_models/waffle_pi_1/: model-1_4.sdf
ros/catkin_ws/src/waffle_pi_models/waffle_pi_1/meshes/: artag_12.dae
ros/maps/: map.yaml
