<package>
    <name>amcl_msgs</name>
    <version>0.0.0</version>
    <description>
        <p>
            
        </p>
    </description>
    <url>http://wiki.ros.org/amcl</url>
    <author>Zachary Smeton</author>
    <author>smetonzn@gmail.com</author>
    <maintainer email="smetonzn@gmail.com">Zachary Smeton</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rosbag</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <run_depend>message_runtime</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>std_msgs</run_depend>

    <test_depend>rostest</test_depend>
    <test_depend>map_server</test_depend>
    
</package>
